force-app/main/default/objects/Dev_DLI_Attendance__c/Dev_DLI_Attendance__c.object-meta.xml
<CustomObject>
    <description>Developer Marketing: Captures DLI trainee data i.e. course registration, attendance and certification information.</description>
    <label>Dev DLI Attendance</label>
    <nameField>
        <displayFormat>Dev-DLIA-{0000000}</displayFormat>
        <label>Dev DLI Attendance Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dev DLI Attendance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>