force-app/main/default/objects/Dev_DLI_Attendance__c/fields/Active_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Active_Enrollment__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active Enrollment</label>
    <type>Checkbox</type>
</CustomField>