force-app/main/default/objects/Dev_DLI_Attendance__c/fields/Attendance_Date__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Date__c</fullName>
    <description>Date a developer actually took/attended a DLI course</description>
    <label>Attendance Date</label>
    <type>DateTime</type>
</CustomField>