force-app/main/default/objects/Dev_DLI_Attendance__c/fields/Certification_Date__c.field-meta.xml
<CustomField>
    <fullName>Certification_Date__c</fullName>
    <description>Date a developer obtained a certification after successful completion of a DLI course</description>
    <label>Certification Date</label>
    <type>DateTime</type>
</CustomField>