force-app/main/default/objects/Dev_DLI_Attendance__c/fields/Course_ID__c.field-meta.xml
<CustomField>
    <fullName>Course_ID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Course ID</label>
    <referenceTo>Dev_DLI_Course__c</referenceTo>
    <relationshipLabel>Dev DLI Attendance</relationshipLabel>
    <relationshipName>Dev_DLI_Attendance</relationshipName>
    <type>Lookup</type>
</CustomField>