force-app/main/default/objects/Dev_DLI_Attendance__c/fields/Course_Type__c.field-meta.xml
<CustomField>
    <fullName>Course_Type__c</fullName>
    <label>Course Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Instructor-Led</fullName>
            </value>
            <value>
                <fullName>Instructor-Led Remote</fullName>
            </value>
            <value>
                <fullName>Self-Paced Online</fullName>
            </value>
            <value>
                <fullName>Third party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>