force-app/main/default/objects/Dev_DLI_Attendance__c/fields/Delivery_Code__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Code__c</fullName>
    <description>Captures event/service delivery code in case reference DLI Service Delivery record doesn&apos;t exist</description>
    <label>Delivery Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>