force-app/main/default/objects/Dev_DLI_Attendance__c/fields/Delivery_ID__c.field-meta.xml
<CustomField>
    <fullName>Delivery_ID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Service Delivery ID</label>
    <referenceTo>Dev_DLI_Service_Delivery__c</referenceTo>
    <relationshipLabel>Dev DLI Attendance</relationshipLabel>
    <relationshipName>Dev_DLI_Attendance</relationshipName>
    <type>Lookup</type>
</CustomField>