force-app/main/default/objects/Dev_DLI_Attendance__c/fields/Dev_Contact__c.field-meta.xml
<CustomField>
    <fullName>Dev_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Developer who took a DLI course</description>
    <label>Dev Contact</label>
    <referenceTo>Dev_Contact__c</referenceTo>
    <relationshipLabel>Dev DLI Attendance</relationshipLabel>
    <relationshipName>Dev_DLI_Attendance</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>