force-app/main/default/objects/Dev_DLI_Attendance__c/fields/Dev_DLI_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Dev_DLI_Purchase__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Purchase ID</label>
    <referenceTo>Dev_DLI_Purchase__c</referenceTo>
    <relationshipLabel>Dev DLI Attendance</relationshipLabel>
    <relationshipName>Dev_DLI_Attendance</relationshipName>
    <type>Lookup</type>
</CustomField>