force-app/main/default/objects/Dev_DLI_Attendance__c/fields/Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Date__c</fullName>
    <description>Date that a developer enrolled in a DLI course</description>
    <label>Enrollment Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>