force-app/main/default/objects/Dev_DLI_Attendance__c/fields/Promotion_Code__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Code__c</fullName>
    <description>Captures code of promotions/discounts offered to DLI trainees for a given course/service delivery</description>
    <label>Promotion Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>