force-app/main/default/objects/Dev_DLI_Attendance__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Attendee</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Presenter / Instructor</fullName>
            </value>
            <value>
                <fullName>Teaching Assistant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>