force-app/main/default/objects/Dev_DLI_Attendance__c/fields/Source_Enrollment_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_Enrollment_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Enrollment ID from source system (in this case OpenEdX)</description>
    <externalId>true</externalId>
    <label>Source Enrollment ID</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>