force-app/main/default/objects/Dev_DLI_Attendance__c/fields/Source_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_User_ID__c</fullName>
    <description>User ID of the developer taking a DLI course</description>
    <label>Source User ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>